# DTU_ml-ops-template

./: .dockerignore  .gitignore  .uvignore  README.md  cookiecutter.json  pyproject.toml  tasks.py
.github/workflows/: pre-commit-update.yaml  template.yaml  tests.yaml
configs/: advanced_config.yaml  simple_config.yaml
hooks/: post_gen_project.py
tests/: wrong_config1.yaml  wrong_config2.yaml  wrong_config3.yaml  wrong_config4.yaml
{{ cookiecutter.repo_name }}/: .env  .gitignore  README.md  pyproject.toml  tasks.py
{{ cookiecutter.repo_name }}/.github/workflows/: pre-commit-update.yaml
{{ cookiecutter.repo_name }}/configs/: config.yaml  model_conf.yaml  training_conf.yaml
{{ cookiecutter.repo_name }}/configs/optimizer/: adam.yaml  nesterov.yaml
{{ cookiecutter.repo_name }}/dockerfiles/: api.dockerfile  train.dockerfile
